<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/Ash"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TV_TITLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="monospace"
        android:text="@string/shinra_tensei"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/IV"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ET"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:srcCompat="@drawable/shinra_tensei" />

    <EditText
        android:id="@+id/ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/TV_TITLE"
        android:hint="@string/write_something_if_you_can"
        android:inputType=""
        android:textAlignment="center" />


    <TextView
        android:id="@+id/TV"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/IV"
        android:hint="@string/text_will_show_up_here"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BTN"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/text_test" />

    <Button
        android:id="@+id/o"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TV"
        android:background="@drawable/list" />

    <Button
        android:id="@+id/o2"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@+id/TV"
        android:layout_toEndOf="@+id/o"
        android:background="@drawable/hash" />

    <Button
        android:id="@+id/o3"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@+id/TV"
        android:layout_toEndOf="@+id/o2"
        android:background="@drawable/calculation" />

    <Button
        android:id="@+id/o4"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@+id/TV"
        android:layout_toEndOf="@+id/o3"
        android:background="@drawable/construction" />

    <Button
        android:id="@+id/o5"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@+id/TV"
        android:layout_toEndOf="@+id/o4"
        android:background="@drawable/menu" />

    <Button
        android:id="@+id/o6"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@+id/TV"
        android:layout_toEndOf="@+id/o5"
        android:background="@drawable/internet1" />

    <Button
        android:id="@+id/o7"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/internet1" />

    <Button
        android:id="@+id/o8"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/o7"
        android:layout_marginStart="85dp"
        android:background="@drawable/internet1" />






</RelativeLayout>